WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
49724
[GTK] Building with Blob support fails
https://bugs.webkit.org/show_bug.cgi?id=49724
Summary
[GTK] Building with Blob support fails
Adam Bergkvist
Reported
2010-11-18 04:21:06 PST
Building with --blob fails.
Attachments
proposed patch
(4.87 KB, patch)
2010-11-18 04:35 PST
,
Adam Bergkvist
no flags
Details
Formatted Diff
Diff
updated patch
(4.78 KB, patch)
2010-11-19 05:34 PST
,
Adam Bergkvist
mrobinson
: review+
commit-queue
: commit-queue-
Details
Formatted Diff
Diff
updated patch
(4.82 KB, patch)
2010-11-22 05:14 PST
,
Adam Bergkvist
mrobinson
: review+
commit-queue
: commit-queue-
Details
Formatted Diff
Diff
updated patch
(4.86 KB, patch)
2010-11-23 07:01 PST
,
Adam Bergkvist
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Adam Bergkvist
Comment 1
2010-11-18 04:35:47 PST
Created
attachment 74226
[details]
proposed patch Build fix.
WebKit Review Bot
Comment 2
2010-11-18 16:58:57 PST
Attachment 74226
[details]
did not build on gtk: Build output:
http://queues.webkit.org/results/6131059
Adam Bergkvist
Comment 3
2010-11-19 05:34:26 PST
Created
attachment 74374
[details]
updated patch Updated patch. JSArrayBufferViewCustom.cpp was removed in
r72343
.
WebKit Commit Bot
Comment 4
2010-11-19 22:05:20 PST
Comment on
attachment 74374
[details]
updated patch Rejecting patch 74374 from commit-queue. Failed to run "['./WebKitTools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '--bot-id=eseidel-cq-sl', 'land-attachment', '--force-clean', '--ignore-builders', '--non-interactive', '--parent-command=commit-queue', 74374]" exit_code: 1 Logging in as
commit-queue@webkit.org
... Fetching:
https://bugs.webkit.org/attachment.cgi?id=74374&action=edit
Fetching:
https://bugs.webkit.org/show_bug.cgi?id=49724
&ctype=xml Processing 1 patch from 1 bug. Cleaning working directory Updating working directory Processing patch 74374 from
bug 49724
. ERROR: /Projects/CommitQueue/WebCore/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output:
http://queues.webkit.org/results/6152071
Adam Bergkvist
Comment 5
2010-11-22 05:14:06 PST
Created
attachment 74542
[details]
updated patch Sorry, ChangeLog "Reviewed by"-line was missing in the previous patch.
WebKit Commit Bot
Comment 6
2010-11-23 05:44:01 PST
Comment on
attachment 74542
[details]
updated patch Rejecting patch 74542 from commit-queue. Failed to run "['./WebKitTools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '--bot-id=abarth-cq-sl', 'apply-attachment', '--force-clean', '--non-interactive', 74542]" exit_code: 2 Last 500 characters of output: AILED at 666. Hunk #3 succeeded at 746 with fuzz 2 (offset 11 lines). Hunk #4 succeeded at 778 (offset 11 lines). Hunk #5 FAILED at 823. Hunk #6 succeeded at 1506 (offset 21 lines). Hunk #7 succeeded at 1523 (offset 21 lines). 2 out of 7 hunks FAILED -- saving rejects to file WebCore/GNUmakefile.am.rej patching file WebCore/platform/gtk/FileSystemGtk.cpp Failed to run "[u'/Users/abarth/git/webkit-queue/WebKitTools/Scripts/svn-apply', u'--reviewer', u'Martin Robinson', u'--force']" exit_code: 1 Full output:
http://queues.webkit.org/results/6364012
Martin Robinson
Comment 7
2010-11-23 05:47:16 PST
Adam, I think you need to update this patch to ToT again. :/
Adam Bergkvist
Comment 8
2010-11-23 07:01:16 PST
Created
attachment 74659
[details]
updated patch Here we go again.
WebKit Commit Bot
Comment 9
2010-11-23 09:29:40 PST
Comment on
attachment 74659
[details]
updated patch Clearing flags on attachment: 74659 Committed
r72614
: <
http://trac.webkit.org/changeset/72614
>
WebKit Commit Bot
Comment 10
2010-11-23 09:29:45 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug