2010-11-23  Adam Bergkvist  <adam.bergkvist@ericsson.com>

Reviewed by Martin Robinson.

        [GTK] Building with Blob support fails
        https://bugs.webkit.org/show_bug.cgi?id=49724

        Build fix.

        * GNUmakefile.am:
        * platform/gtk/FileSystemGtk.cpp:
        (WebCore::seekFile): Not implemented.

Canonical link: https://commits.webkit.org/63075@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@72614 268f45cc-cd09-0410-ab3c-d52691b4dbfc